--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -110,5 +110,6 @@ img {
   .content {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 0;
   }
 }
