--- a/four-card-feature-section-master/style.css
+++ b/four-card-feature-section-master/style.css
@@ -112,6 +112,9 @@ header p:nth-child(2) {
 		margin: 0  auto 3.125rem auto;
 		font-size: 1.125rem;
 	}
+	header p:first-child, header p:nth-child(2) {
+		font-size: 1.25rem;
+	}
 	header p:nth-child(3) {
 		font-size: .8125rem;
 	}
